[package]
name = "blz-rs"
version = "0.1.0"
authors = ["codingsh <codingsh@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.17"
serde = "^1.0.53"
serde_derive = "^1.0.53"
hex = "^0.3.2"
tiny-keccak = "^1.4.2"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1", rev = "db81cfea59014b4d176f10f86ed52e1a130b6822" }
blake2b  = { git = "https://github.com/cryptape/cita-common", branch = "develop", optional = true }
types = { version = "^0.4.0", package = "ethereum-types"}